--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
-    "react-router-dom": "^6.11.2"
+    "react-loader-spinner": "^5.3.4",
+    "react-router-dom": "^6.11.2",
+    "sweetalert2": "^11.7.11",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
